# mpp-session-mvx

./: .gitignore  Cargo.toml  README.md  sc-config.toml
.agent/cache/: contract_schema.json
interactor/: Cargo.toml  state.toml
interactor/src/: config.rs  interact.rs  interactor_main.rs  mpp_session_mvx_proxy.rs
interactor/tests/: interact_cs_tests.rs  interact_tests.rs
meta/: Cargo.toml
meta/src/: main.rs
output/: mpp-session-mvx.abi.json  mpp-session-mvx.imports.json  mpp-session-mvx.mxsc.json  mpp-session-mvx.wasm
src/: errors.rs  lib.rs
tests/: mpp_session_close_negative_test.rs  mpp_session_integration_test.rs  mpp_session_negative_test.rs  mpp_session_open_test.rs  mpp_session_request_close_negative_test.rs  mpp_session_scenario_test.rs  mpp_session_settle_negative_test.rs  mpp_session_slashing_test.rs  mpp_session_test.rs  mpp_session_topup_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
